src/objects/Big_deals_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Actividades_durante_preventa__c</fullName>
        <description>Actividades a realizar durante la preventa</description>
        <inlineHelpText>Actividades a realizar durante la preventa</inlineHelpText>
        <label>Actividades durante preventa</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solo Oferta</fullName>
                </value>
                <value>
                    <fullName>Solo preventa especialista sectorial</fullName>
                </value>
                <value>
                    <fullName>Preventa especialista sectorial + Oferta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alcance_de_la_colaboracion_con_terceros__c</fullName>
        <description>% de colaboración de terceros necesaria</description>
        <inlineHelpText>% de colaboración de terceros necesaria</inlineHelpText>
        <label>Alcance de la colaboración con terceros</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 10%</fullName>
                </value>
                <value>
                    <fullName>&lt; 20%</fullName>
                </value>
                <value>
                    <fullName>&lt; 30%</fullName>
                </value>
                <value>
                    <fullName>&lt; 40%</fullName>
                </value>
                <value>
                    <fullName>&lt; 50%</fullName>
                </value>
                <value>
                    <fullName>&lt; 60%</fullName>
                </value>
                <value>
                    <fullName>&lt; 70%</fullName>
                </value>
                <value>
                    <fullName>&lt; 80%</fullName>
                </value>
                <value>
                    <fullName>&gt; 80%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alcance_definido__c</fullName>
        <defaultValue>false</defaultValue>
        <description>¿Se conoce el alcance del proyecto?</description>
        <inlineHelpText>¿Se conoce el alcance del proyecto?</inlineHelpText>
        <label>Alcance definido</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ambito_donde_ya_es_cliente_con_TEF__c</fullName>
        <description>Ambito geográfico donde ya es nuestro cliente</description>
        <inlineHelpText>Ambito geográfico donde ya es nuestro cliente</inlineHelpText>
        <label>Ambito donde ya es cliente con TEF</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARG</fullName>
                </value>
                <value>
                    <fullName>BRA</fullName>
                </value>
                <value>
                    <fullName>CHI</fullName>
                </value>
                <value>
                    <fullName>COL</fullName>
                </value>
                <value>
                    <fullName>ECU</fullName>
                </value>
                <value>
                    <fullName>PER</fullName>
                </value>
                <value>
                    <fullName>VEN</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>España</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aprobar_Go_Estrategico__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aprobar Go Estrategico</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cantidad_de_personas_a_incorporar__c</fullName>
        <description>¿Nº de personas que tendrían que incorporarse en plantilla?</description>
        <inlineHelpText>¿Nº de personas que tendrían que incorporarse en plantilla?</inlineHelpText>
        <label>Cantidad de personas a incorporar</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>+80</fullName>
                </value>
                <value>
                    <fullName>+70</fullName>
                </value>
                <value>
                    <fullName>+50</fullName>
                </value>
                <value>
                    <fullName>+40</fullName>
                </value>
                <value>
                    <fullName>+30</fullName>
                </value>
                <value>
                    <fullName>+20</fullName>
                </value>
                <value>
                    <fullName>+15</fullName>
                </value>
                <value>
                    <fullName>+10</fullName>
                </value>
                <value>
                    <fullName>+5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cantidad_jornadas_preventa_y_oferta__c</fullName>
        <description>Calcular el nº de jornadas =  &quot;Nº de FTES totales&quot; x &quot;meses de duración de la preventa y oferta&quot; x &quot;22 jornadas/mes&quot;</description>
        <inlineHelpText>Calcular el nº de jornadas =  &quot;Nº de FTES totales&quot; x &quot;meses de duración de la preventa y oferta&quot; x &quot;22 jornadas/mes&quot;</inlineHelpText>
        <label>Cantidad jornadas preventa y oferta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacidad_para_cumplir_los_SLA__c</fullName>
        <description>¿Cuánta es la facilidad de cumplir los SLAs solicitados?</description>
        <inlineHelpText>¿Cuánta es la facilidad de cumplir los SLAs solicitados?</inlineHelpText>
        <label>Capacidad para cumplir los SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Escasa</fullName>
                </value>
                <value>
                    <fullName>Baja</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Alta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capex_a_o_en_curso__c</fullName>
        <description>Capex estimado para el año en curso (actual) (MM USD)</description>
        <inlineHelpText>Capex estimado para el año en curso (actual) (MM USD)</inlineHelpText>
        <label>Capex año en curso</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_total__c</fullName>
        <description>Capex estimado total del proyecto (MM USD)</description>
        <inlineHelpText>Capex estimado total del proyecto (MM USD)</inlineHelpText>
        <label>Capex total</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Codigo_en_Sales_Force_del_proyecto__c</fullName>
        <description>Código en Sales Force del proyecto</description>
        <inlineHelpText>Código en Sales Force del proyecto</inlineHelpText>
        <label>Código en Sales Force del proyecto</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competencia__c</fullName>
        <description>¿Se conoce quienes son los competidores en esta oportunidad?. Enumerarlos en caso afirmativo</description>
        <inlineHelpText>¿Se conoce quienes son los competidores en esta oportunidad?. Enumerarlos en caso afirmativo</inlineHelpText>
        <label>Competencia</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condiciones_previas_para_licitar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>¿Existen requisitos previos de empresa, de niveles de certificación, de exigencias fiscales, etc?</description>
        <inlineHelpText>¿Existen requisitos previos de empresa, de niveles de certificación, de exigencias fiscales, etc?</inlineHelpText>
        <label>Condiciones previas para licitar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consumo_capex_activos_fijos__c</fullName>
        <defaultValue>false</defaultValue>
        <description>¿Hay consumo de Capex en Activos Fijos?</description>
        <inlineHelpText>¿Hay consumo de Capex en Activos Fijos?</inlineHelpText>
        <label>Consumo capex en activos fijos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Descripcion_de_los_entregables_del__c</fullName>
        <description>Descripción de los distintos entregables: productos, servicios, proyectos a medida</description>
        <inlineHelpText>Descripción de los distintos entregables: productos, servicios, proyectos a medida</inlineHelpText>
        <label>Descripción de los entregables</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detalle_de_experiencia_en_el_Grupo__c</fullName>
        <description>Detallar la experiencia en el Grupo</description>
        <inlineHelpText>Detallar la experiencia en el Grupo</inlineHelpText>
        <label>Detalle de experiencia en el Grupo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detalle_de_perfiles_necesarios__c</fullName>
        <description>Describir los perfiles necesarios para los recursos de terceros</description>
        <inlineHelpText>Describir los perfiles necesarios para los recursos de terceros</inlineHelpText>
        <label>Detalle de perfiles necesarios</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detalle_penalizaciones_indemnizaciones__c</fullName>
        <description>Detallar el importe de las penalizaciones / indemnizaciones</description>
        <inlineHelpText>Detallar el importe de las penalizaciones / indemnizaciones (MM USD)</inlineHelpText>
        <label>Detalle penalizaciones indemnizaciones</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>no conocidas</fullName>
                </value>
                <value>
                    <fullName>+200</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detalles_adicionales__c</fullName>
        <label>Detalles adicionales</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Duracion_de_la_garantia__c</fullName>
        <description>Duración de la garantia, si procede (años)</description>
        <inlineHelpText>Duración de la garantia, si procede (años)</inlineHelpText>
        <label>Duracion de la garantia</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No existe</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>&gt; 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duracion_de_responsabilidad_civil__c</fullName>
        <description>Definir el tiempo que dura la responsabilidad civil (años)</description>
        <inlineHelpText>Definir el tiempo que dura la responsabilidad civil (años)</inlineHelpText>
        <label>Duración de responsabilidad civil</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>no existe</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>&gt; 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duracion_del_proyecto__c</fullName>
        <description>Duración total del proyecto (meses)</description>
        <inlineHelpText>Duración total del proyecto (meses)</inlineHelpText>
        <label>Duración del proyecto (meses)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duracion_estimada_Preventa__c</fullName>
        <description>Duración estimada de la Preventa y Oferta (considerando todas las fases) (meses)</description>
        <inlineHelpText>Duración estimada de la Preventa y Oferta (considerando todas las fases) (meses)</inlineHelpText>
        <label>Duración estimada de la Preventa</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>+9</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Es_cliente_actual_de_TEF__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Es cliente actual</description>
        <inlineHelpText>Es cliente actual</inlineHelpText>
        <label>Es cliente actual de TEF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Es_moroso_con_el_Grupo__c</fullName>
        <description>¿Es moroso con el Grupo?</description>
        <inlineHelpText>¿Es moroso con el Grupo?</inlineHelpText>
        <label>¿Es moroso con el Grupo?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NS/NC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estabilidad_financiera_cliente__c</fullName>
        <defaultValue>false</defaultValue>
        <description>¿Ha tenido el cliente concurso de mora o similar en algún momento, o tiene deuda superior a 1 año?</description>
        <inlineHelpText>¿Ha tenido el cliente concurso de mora o similar en algún momento, o tiene deuda superior a 1 año?</inlineHelpText>
        <label>Estabilidad financiera del cliente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estabilidad_organizacion_del_cliente__c</fullName>
        <description>¿Es previsible que exista un cambio en la organización / responsables del cliente en el plazo de 12 meses?</description>
        <inlineHelpText>¿Es previsible que exista un cambio en la organización / responsables del cliente en el plazo de 12 meses?</inlineHelpText>
        <label>Estabilidad de organización del cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Escasa</fullName>
                </value>
                <value>
                    <fullName>Baja</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Alta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estan_perfiles_clave_necesarios__c</fullName>
        <defaultValue>false</defaultValue>
        <description>¿Existen los perfiles clave necesarios para el proyecto y están accesibles?</description>
        <inlineHelpText>¿Existen los perfiles clave necesarios para el proyecto y están accesibles?</inlineHelpText>
        <label>Están los perfiles clave necesarios</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existe_descripcion_tecnica__c</fullName>
        <defaultValue>false</defaultValue>
        <description>¿Existe una descripción técnica de alto nivel de la solución propuesta?</description>
        <inlineHelpText>¿Existe una descripción técnica de alto nivel de la solución propuesta?</inlineHelpText>
        <label>Existe descripción tecnica</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existe_experiencia_previa_con_solucion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>¿Existe experiencia previa con la solución tecnológica propuesta?</description>
        <inlineHelpText>¿Existe experiencia previa con la solución tecnológica propuesta?</inlineHelpText>
        <label>Existe experiencia previa con solución</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Experiencia_con_proyectos_similares__c</fullName>
        <description>¿Existe experiencia en el Grupo en proyectos similares?</description>
        <inlineHelpText>¿Existe experiencia en el Grupo en proyectos similares?</inlineHelpText>
        <label>Experiencia con proyectos similares</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>ns/nc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCV_de_contratos_actuales__c</fullName>
        <description>FCV de los contratos actuales</description>
        <inlineHelpText>FCV de los contratos actuales (MM USD)</inlineHelpText>
        <label>FCV de contratos actuales</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-10</fullName>
                </value>
                <value>
                    <fullName>10-20</fullName>
                </value>
                <value>
                    <fullName>20-50</fullName>
                </value>
                <value>
                    <fullName>50-100</fullName>
                </value>
                <value>
                    <fullName>100-500</fullName>
                </value>
                <value>
                    <fullName>500-1.000</fullName>
                </value>
                <value>
                    <fullName>&gt; 1.000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCV_o_valor_total_de_contrato__c</fullName>
        <description>FCV o Valor total del contrato (MM USD)</description>
        <inlineHelpText>FCV o Valor total del contrato (MM USD)</inlineHelpText>
        <label>zz OBSOLETO FCV</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTE_no_presentes__c</fullName>
        <description>Concretar el número de FTEs que son necesarios para el equipo de oferta, que no forman parte de la OB</description>
        <inlineHelpText>Concretar el número de FTEs que son necesarios para el equipo de oferta, que no forman parte de la OB</inlineHelpText>
        <label>FTE no presentes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1 - 2</fullName>
                </value>
                <value>
                    <fullName>3 - 4</fullName>
                </value>
                <value>
                    <fullName>5 o más</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FTE_que_se_aportaran__c</fullName>
        <description>Concretar el número FTEs que la OB está dispuesta a aportar en preventa y propuesta</description>
        <inlineHelpText>Concretar el número FTEs que la OB está dispuesta a aportar en preventa y propuesta</inlineHelpText>
        <label>FTE que se aportaran</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>+5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FTE_terceros_requeridos__c</fullName>
        <description>Concretar el número de FTEs de terceros que se requieren</description>
        <inlineHelpText>Concretar el número de FTEs de terceros que se requieren</inlineHelpText>
        <label>FTE terceros requeridos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>+5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fecha_comienzo_de_contrato__c</fullName>
        <description>Fecha estimada de comienzo del contrato</description>
        <inlineHelpText>Fecha estimada de comienzo del contrato</inlineHelpText>
        <label>Fecha comienzo de contrato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_defensa__c</fullName>
        <description>Fecha en la que debe defenderse la oferta frente al cliente (si procede)</description>
        <inlineHelpText>Fecha en la que debe defenderse la oferta frente al cliente (si procede)</inlineHelpText>
        <label>Fecha de defensa</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_estimada_del_fallo__c</fullName>
        <description>Fecha estimada del fallo por parte del cliente</description>
        <inlineHelpText>Fecha estimada del fallo por parte del cliente</inlineHelpText>
        <label>Fecha estimada del fallo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_contract_value__c</fullName>
        <description>FCV o Valor total del contrato (MM USD)</description>
        <inlineHelpText>FCV o Valor total del contrato (MM USD)</inlineHelpText>
        <label>Full contract value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grado_certeza_continuidad_plataforma__c</fullName>
        <description>¿Cuál es el grado de fiabilidad sobre la continuidad en el tiempo de la/s plataforma/s estándar sobre las que se implanta la solución tecnológica?</description>
        <inlineHelpText>¿Cuál es el grado de fiabilidad sobre la continuidad en el tiempo de la/s plataforma/s estándar sobre las que se implanta la solución tecnológica?</inlineHelpText>
        <label>Grado certeza continuidad plataforma</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Escasa</fullName>
                </value>
                <value>
                    <fullName>Baja</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Alta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grado_de_conocimiento_del_cliente__c</fullName>
        <description>¿Cuál es el nivel de conocimiento del Cliente: organización + negocio + posicionamiento + estrategia...?</description>
        <inlineHelpText>¿Cuál es el nivel de conocimiento del Cliente: organización + negocio + posicionamiento + estrategia...?</inlineHelpText>
        <label>Grado de conocimiento del cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Escaso</fullName>
                </value>
                <value>
                    <fullName>Bajo</fullName>
                </value>
                <value>
                    <fullName>Medio</fullName>
                </value>
                <value>
                    <fullName>Alto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grado_exigencia_SLA__c</fullName>
        <description>¿Cuál es el grado de exigencia de los SLAs que pide el cliente respecto a nuestro estándar?</description>
        <inlineHelpText>¿Cuál es el grado de exigencia de los SLAs que pide el cliente respecto a nuestro estándar?</inlineHelpText>
        <label>Grado de exigencia de los SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alto</fullName>
                </value>
                <value>
                    <fullName>Medio</fullName>
                </value>
                <value>
                    <fullName>Bajo</fullName>
                </value>
                <value>
                    <fullName>Escaso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impacto_en_el_cliente__c</fullName>
        <description>¿Cuál es el impacto del proyecto en el negocio del cliente?</description>
        <inlineHelpText>¿Cuál es el impacto del proyecto en el negocio del cliente?</inlineHelpText>
        <label>Impacto en el cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alto</fullName>
                </value>
                <value>
                    <fullName>Medio</fullName>
                </value>
                <value>
                    <fullName>Bajo</fullName>
                </value>
                <value>
                    <fullName>Escaso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Importe_fianzas_depositar__c</fullName>
        <description>Cuantificar el importe de las Fianzas a depositar (miles USD)</description>
        <inlineHelpText>Cuantificar el importe de las Fianzas a depositar (miles USD)</inlineHelpText>
        <label>Importe de fianzas a depositar</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>+200</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Informacion_formalizada_suficiente__c</fullName>
        <defaultValue>false</defaultValue>
        <description>¿Existe información formalizada detallada y suficiente para elaborar la propuesta?</description>
        <inlineHelpText>¿Existe información formalizada detallada y suficiente para elaborar la propuesta?</inlineHelpText>
        <label>Información formalizada suficiente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interrelacion_con_principales_decisores__c</fullName>
        <description>¿Cuál es el grado de interrelación con los principales decisores?</description>
        <inlineHelpText>¿Cuál es el grado de interrelación con los principales decisores?</inlineHelpText>
        <label>Interrelación con principales decisores</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Escaso</fullName>
                </value>
                <value>
                    <fullName>Bajo</fullName>
                </value>
                <value>
                    <fullName>Medio</fullName>
                </value>
                <value>
                    <fullName>Alto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lineas_implicadas__c</fullName>
        <description>Detallar el % de la solución que puede aportar con su portfolio</description>
        <inlineHelpText>Detallar el % de la solución que puede aportar con su portfolio</inlineHelpText>
        <label>Lineas de producto implicadas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NAV_12_meses_naturales__c</fullName>
        <description>Ingresos durante los próximos 12 meses naturales (a contar desde hoy)</description>
        <inlineHelpText>Ingresos durante los próximos 12 meses naturales (a contar desde hoy)</inlineHelpText>
        <label>NAV 12 meses naturales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NAV_o_ingresos_proximos_12_meses__c</fullName>
        <description>Ingresos durante los primeros 12 meses de vida del proyecto (MM USD)</description>
        <inlineHelpText>Ingresos durante los primeros 12 meses de vida del proyecto (MM USD)</inlineHelpText>
        <label>NAV o ingresos proximos 12 meses</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Necesario_desarrollar_oferta_con_tercero__c</fullName>
        <defaultValue>false</defaultValue>
        <description>¿Es imprescindible la colaboración con un tercero para desarrollar la oferta?</description>
        <inlineHelpText>¿Es imprescindible la colaboración con un tercero para desarrollar la oferta?</inlineHelpText>
        <label>Necesario desarrollar oferta con tercero</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Necesidad_de_incorporar_personas__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Definir si existe la necesidad de incorporar personas en plantilla</description>
        <inlineHelpText>Definir si existe la necesidad de incorporar personas en plantilla</inlineHelpText>
        <label>Necesidad de incorporar personas</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>